# finhub

./: .gitignore  API.md  Dockerfile  README.md  RELEASE-NOTES.md  ai_clients_config.env  ai_tasks.env  ai_vendors.env  app_config.env  finhub_proxy_config.env  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.cache_data/: ASX_Listed_Companies.csv  asx_cache.json  sp1500_cache.json
.github/: copilot-instructions.md
.github/workflows/: cache_static_data.yaml  ci.yaml  release.yaml
.semrelease/: this_release
app/: __init__.py  config.py  main.py
app/models/: ai.py  event.py  finhub.py  types.py
app/routers/: ai.py  events.py  stocks.py  toz.py
app/schemas/: ai.py  base_req_resp.py  events.py  finhub.py  stocks.py
app/services/: __init__.py  ai.py  ai_helper.py  crawler.py  event.py  msai_analyze_div_event.py  msai_analyze_ticker.py  msai_asx_listings.py  msai_build_portfolio.py  (+5 more)
qnd/: qnd_cache_asx.py  qnd_cache_sp1500.py  qnd_update_asx_indices.py  qnd_update_us_indices.py  qnd_update_vn_indices.py  qnd_verify_asx_indices.py  qnd_verify_static_tickers.py  qnd_verify_us_indices.py
tests/: test_event_service.py  test_main.py  test_models_event.py  test_msai_services.py  test_routers_ai.py  test_routers_auth.py  test_routers_events.py  test_routers_stocks.py  test_routers_toz.py  test_services_ai.py  test_services_ai_helper.py  test_services_crawler.py  test_services_event.py  test_services_msai.py  test_services_stock.py  test_services_toz.py  test_stock_service.py  test_stocks_router.py  test_toz_service.py  test_utils.py
(+43 files in other folders)
