[project]
name = "finhub"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
#ignore = ["E501", "E203", "W503", "W504"]
ignore = ["E501"]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
